# zitify

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build-local.sh  deps.cmake  git.cmake  vcpkg.json  zitify  zitify.cpp  zitify.in
.github/workflows/: build-release.yml  cmake.yml
cmake/: deps.cmake  version.cmake
src/: bind.c  connect.c  resolve.c  sockets.c  std_funcs.c  std_funcs.h  zitify.cpp  zitify.h
tests/: CMakeLists.txt  zitify_tests.py
